# py-lambda-docker

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  template.yaml
src/healthz/: Dockerfile  app.py
src/torchtest/: Dockerfile  app.py  requirements.txt
test/: test_healthz.py  test_pytest.py  test_torchtest.py
test/localapi/: app.py
